# Fingerprint

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  deploy.ps1  tmp_models.txt
backend/: .env.example  config.py  generators.py  handlers.py  json_utils.py  main.py  planner.py  profile.py  prompts.py  pyproject.toml  session_state.py
frontend/: README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/audio/: mic-processor.js
frontend/src/components/: Analyser.ts  AudioOrb3D.tsx  ContentStream.tsx  LoginLandingPage.tsx  QuizCard.tsx  SessionSummary.tsx  VisualCanvas.tsx  WorkedExampleCard.tsx
frontend/src/components/session/: ProfilePanel.tsx  SessionConsole.tsx  SessionHero.tsx  SessionPage.tsx  SessionStage.tsx  useSessionViewModel.ts
frontend/src/components/shaders/: backdrop-shader.ts  sphere-shader.ts
frontend/src/hooks/: useAudioWebSocket.ts
frontend/src/lib/: learnerIdentity.ts
